high gpu/cpu usage fixed 11.12.2023
- took me this long to realize the particles are using WAY too much gpu
- small visual fixes for mobile

--- a/app/global.css
+++ b/app/global.css
@@ -275,7 +275,7 @@ hr {
 
 .prose img {
 	/* Don't apply styles to next/image */
-	@apply mb-2 h-full object-contain;
+	@apply mb-1 sm:mb-2 h-full object-contain;
 }
 .prose img:first-child {
 	@apply mt-0;
